--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>CS171 - Boilerplate</title>
+		<title>SnapNutrition</title>
 
 		<!-- Load CSS libraries -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -18,34 +18,19 @@
 	<!-- DON'T WRITE CSS IN YOUR HTML LIKE WE DID HERE - THE INLINE CSS SHOULD HELP YOU TO UNDERSTAND THE BEHAVIOR OF THE ELEMENTS BETTER -
 		 WHEN SUBMITTING, WE ALWAYS EXPECT CLEAR SEPARATION OF HTML, CSS, AND JS INTO THE PROPER FILES -->
 	<body style="padding: 5vh">
-	<div class="container-fluid" style="border: thin solid grey; border-radius: 5px">
-		<div class="row justify-content-center" style="height: 12vh; background: #22223b;">
-			<div class="align-self-center">
-				<h1 style="color: #F2E9E4">CS 171 Boilerplate</h1>
+	<div class="container-fluid" style="border: thin solid grey; border-radius: 5px; width: 60em">
+		<div class="row justify-content-center" style="height: 12vh; background: white; border: thin solid grey; border-radius: 5px">
+			<div class="align-self-center" style="text-align: center">
+				<h1 style="color: black">SnapNutrition</h1>
 			</div>
 		</div>
-		<div class="row" style="height: 70vh">
-			<div class="col-6" style="background: #4A4E69">
+		<div class="row" style="height: 70vh; width: 55em">
+			<div class="col-12" style="background: white">
 				<div class="row justify-content-center" style="height: 100%">
-					<div class="align-self-center">
-						<p>left</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-6" style="background: #9A8C98">
-				<div class="row justify-content-center" style="height: 100%">
-					<div class="align-self-center">
-						<p style="text-align: center">
-							useful links:<br>
-							<a href="https://coolors.co/22223b-4a4e69-9a8c98-c9ada7-f2e9e4">color palettes</a><br>
-							<a href="https://colorbrewer2.org/#type=sequential&scheme=BuGn&n=3">color brewer</a><br>
-							(add your own)
-						</p>
-					</div>
+						<img src="img/1837-diabetic-pecan-crusted-chicken-breast_JulAug20DF_clean-simple_061720 Background Removed.png" alt="Food Image">
 				</div>
 			</div>
 		</div>
-		<div class="row" style="height: 7vh; background: #C9ADA7"></div>
 	</div>
 
 
