Prototype wireframe with 2 pages

--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,17 @@
 		<div class="row" style="height: 70vh; width: 55em">
 			<div class="col-12" style="background: white">
 				<div class="row justify-content-center" style="height: 100%">
-						<img src="img/1837-diabetic-pecan-crusted-chicken-breast_JulAug20DF_clean-simple_061720 Background Removed.png" alt="Food Image">
+					<img src="img/1837-diabetic-pecan-crusted-chicken-breast_JulAug20DF_clean-simple_061720 Background Removed.png" alt="Food Image">
 				</div>
 			</div>
+		</div>
+		<div class="row btn-row" style="height: 7vh; background: white; border: thin solid grey; border-radius: 5px">
+			<div class="col-12">
+				<form action="results.html">
+					<button type="submit" class="button submit-food-btn">Upload a Photo to Estimate the Calories</button>
+				</form>
+			</div>
+
 		</div>
 	</div>
 
