--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 
 		<!-- Load CSS libraries -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="static/css/style.css">
 
 		<!-- GOOGLE FONTS -->
 		<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,400italic,300italic' rel='stylesheet' type='text/css'>
@@ -27,7 +27,7 @@
 		<div class="row" style="height: 70vh; width: 55em">
 			<div class="col-12" style="background: white">
 				<div class="row justify-content-center" style="height: 100%">
-					<img src="img/1837-diabetic-pecan-crusted-chicken-breast_JulAug20DF_clean-simple_061720 Background Removed.png" alt="Food Image">
+					<img src="static/img/1837-diabetic-pecan-crusted-chicken-breast_JulAug20DF_clean-simple_061720 Background Removed.png" alt="Food Image">
 				</div>
 			</div>
 		</div>
@@ -52,6 +52,6 @@
 	<script src="https://d3js.org/d3.v7.min.js"></script>
 
 	<!-- own js files -->
-	<script src="js/main.js"></script>
+	<script src="static/js/main.js"></script>
 	</body>
 </html>
